[gd_scene load_steps=2 format=3 uid="uid://dbb2axdp6ve3v"]

[ext_resource type="Script" path="res://scenes/slots/slot_item.gd" id="1_x1665"]

[node name="SlotItem" type="VBoxContainer"]
offset_right = 32.0
offset_bottom = 55.0
theme_override_constants/separation = 0
script = ExtResource("1_x1665")

[node name="TextureContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2

[node name="ItemTextureRect" type="TextureRect" parent="TextureContainer"]
layout_mode = 2
expand_mode = 1

[node name="LabelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ItemLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "0"
